Added interim development

--- a/venture_funding_with_deep_learning.ipynb
+++ b/venture_funding_with_deep_learning.ipynb
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1942,6 +1942,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "IS_SUCCESSFUL\n",
+       "1                18261\n",
+       "0                16038\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1952,7 +1964,9 @@
     "y = applicant_encoded_df[y_target]\n",
     "\n",
     "# Display a sample of y\n",
-    "display(y)"
+    "display(y)\n",
+    "display(y.value_counts())\n",
+    "# Observed target variable, y, is already numerically encoded, therefore can forgo encoding via something like LabelEncoder() object."
    ]
   },
   {
@@ -2499,43 +2513,53 @@
     "# Define the number of hidden nodes for the first hidden layer\n",
     "# We will use the general guidance provided in class, although this is more art than recipe:\n",
     "# Use the mean of the number of input features plus the number of output neurons\n",
-    "hidden_nodes_layer1 =  (number_input_features + number_output_neurons) // 2 # Python floor division operator (//) returns the quotient rounded down to the nearest integer\n",
+    "hidden_nodes_layer_1 =  (number_input_features + number_output_neurons) // 2 # Python floor division operator (//) returns the quotient rounded down to the nearest integer\n",
     "\n",
     "# Review the number hidden nodes in the first layer\n",
-    "print(hidden_nodes_layer1)"
+    "print(hidden_nodes_layer_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the second hidden layer\n",
-    "hidden_nodes_layer2 =  # YOUR CODE HERE\n",
+    "# We will use the general guidance provided in class, although more art than recipe:\n",
+    "# Use the mean of the number of hidden nodes in the first hidden layer plus the number of output neurons\n",
+    "hidden_nodes_layer_2 =  (hidden_nodes_layer_1 + number_output_neurons) // 2\n",
     "\n",
     "# Review the number hidden nodes in the second layer\n",
-    "hidden_nodes_layer2\n"
+    "print(hidden_nodes_layer_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Sequential model instance\n",
-    "nn = # YOUR CODE HERE\n"
+    "neural_net_model = Sequential() # An alternative formulation is the Functional Model, or Model() object, also from the Keras library (c.f. https://becominghuman.ai/sequential-vs-functional-model-in-keras-20684f766057)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the first hidden layer\n",
-    "# YOUR CODE HERE\n"
+    "neural_net_model_layer_1 = neural_net_model.add(Dense(units=hidden_nodes_layer_1, input_dim=number_input_features, activation='relu')) # Review arguments, including 'name'"
    ]
   },
   {
@@ -2545,7 +2569,7 @@
    "outputs": [],
    "source": [
     "# Add the second hidden layer\n",
-    "# YOUR CODE HERE\n"
+    "neural_net_model_layer_2 = neural_net_model.add(Dense(units=hidden_nodes_layer_2, activation='relu'))"
    ]
   },
   {
@@ -2555,7 +2579,7 @@
    "outputs": [],
    "source": [
     "# Add the output layer to the model specifying the number of output neurons and activation function\n",
-    "# YOUR CODE HERE\n"
+    "neural_net_model_layer_out = neural_net_model.add(Dense(units=1, activation='relu'))\n"
    ]
   },
   {
@@ -2565,7 +2589,9 @@
    "outputs": [],
    "source": [
     "# Display the Sequential model summary\n",
-    "# YOUR CODE HERE\n"
+    "print(neural_net_model.summary())\n",
+    "display(neural_net_model.summary())\n",
+    "neural_net_model.summary()"
    ]
   },
   {
