Added interim development

--- a/venture_funding_with_deep_learning.ipynb
+++ b/venture_funding_with_deep_learning.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2404,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2422,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2457,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2466,16 +2466,6 @@
      "text": [
       "116\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "116"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2488,17 +2478,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the number of neurons in the output layer\n",
-    "number_output_neurons = 1 # Single target variable output"
+    "number_output_neurons = 1 # Single target variable output neuron"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2521,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2544,54 +2534,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Sequential model instance\n",
-    "neural_net_model = Sequential() # An alternative formulation is the Functional Model, or Model() object, also from the Keras library (c.f. https://becominghuman.ai/sequential-vs-functional-model-in-keras-20684f766057)"
+    "neural_net_model = Sequential(name='neural_net_venture_funding_model') # An alternative formulation is the Functional Model, or Model() object, also from the Keras library (c.f. https://becominghuman.ai/sequential-vs-functional-model-in-keras-20684f766057)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the first hidden layer\n",
-    "neural_net_model_layer_1 = neural_net_model.add(Dense(units=hidden_nodes_layer_1, input_dim=number_input_features, activation='relu')) # Review arguments, including 'name'"
+    "neural_net_model_layer_1 = neural_net_model.add(Dense(units=hidden_nodes_layer_1, input_dim=number_input_features, \n",
+    "                                                      activation='relu', name='layer_1'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the second hidden layer\n",
-    "neural_net_model_layer_2 = neural_net_model.add(Dense(units=hidden_nodes_layer_2, activation='relu'))"
+    "neural_net_model_layer_2 = neural_net_model.add(Dense(units=hidden_nodes_layer_2, activation='relu', name='layer_2'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the output layer to the model specifying the number of output neurons and activation function\n",
-    "neural_net_model_layer_out = neural_net_model.add(Dense(units=1, activation='relu'))\n"
+    "neural_net_model_layer_out = neural_net_model.add(Dense(units=1, activation='relu', name='layer_out'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<keras.src.layers.core.dense.Dense at 0x29a025ed0>,\n",
+       " <keras.src.layers.core.dense.Dense at 0x29a0267d0>,\n",
+       " <keras.src.layers.core.dense.Dense at 0x29a026fe0>]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'layer_1/kernel:0' shape=(116, 58) dtype=float32, numpy=\n",
+       " array([[-0.05221123, -0.14439568,  0.13584603, ..., -0.07341115,\n",
+       "          0.15308993, -0.17398605],\n",
+       "        [ 0.10816903,  0.13313691,  0.17534386, ..., -0.04174083,\n",
+       "         -0.13365903, -0.13709751],\n",
+       "        [ 0.09773569, -0.15401962, -0.08182041, ..., -0.00128379,\n",
+       "          0.15239896,  0.09649785],\n",
+       "        ...,\n",
+       "        [ 0.06537272,  0.17116411, -0.14356188, ...,  0.18247618,\n",
+       "         -0.01449093, -0.03426176],\n",
+       "        [-0.17274418, -0.11281139, -0.11465201, ...,  0.09424113,\n",
+       "          0.07989188, -0.12798896],\n",
+       "        [-0.0350361 ,  0.071981  ,  0.18057264, ...,  0.08254959,\n",
+       "         -0.1423843 ,  0.07337607]], dtype=float32)>,\n",
+       " <tf.Variable 'layer_1/bias:0' shape=(58,) dtype=float32, numpy=\n",
+       " array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0.], dtype=float32)>,\n",
+       " <tf.Variable 'layer_2/kernel:0' shape=(58, 29) dtype=float32, numpy=\n",
+       " array([[-0.24730468,  0.09206694,  0.23561567, ...,  0.08980101,\n",
+       "         -0.07606825, -0.00604123],\n",
+       "        [ 0.20585993,  0.00962827,  0.23260242, ...,  0.18224695,\n",
+       "          0.09053451,  0.1895952 ],\n",
+       "        [-0.22135797, -0.20414962, -0.01911983, ..., -0.22035843,\n",
+       "         -0.03455201, -0.06083618],\n",
+       "        ...,\n",
+       "        [-0.05399227,  0.01314348, -0.11617805, ..., -0.15317667,\n",
+       "         -0.2434275 ,  0.05863944],\n",
+       "        [-0.00450474, -0.12112583, -0.20520313, ..., -0.2533827 ,\n",
+       "         -0.22882637,  0.13465273],\n",
+       "        [ 0.09404737, -0.19696116, -0.16357249, ..., -0.19583628,\n",
+       "         -0.04040571,  0.09185019]], dtype=float32)>,\n",
+       " <tf.Variable 'layer_2/bias:0' shape=(29,) dtype=float32, numpy=\n",
+       " array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)>,\n",
+       " <tf.Variable 'layer_out/kernel:0' shape=(29, 1) dtype=float32, numpy=\n",
+       " array([[-0.03200778],\n",
+       "        [ 0.28417736],\n",
+       "        [ 0.01526335],\n",
+       "        [ 0.0374324 ],\n",
+       "        [-0.05075166],\n",
+       "        [ 0.17843753],\n",
+       "        [-0.38360906],\n",
+       "        [-0.4342882 ],\n",
+       "        [-0.30281726],\n",
+       "        [-0.41930422],\n",
+       "        [-0.19404271],\n",
+       "        [-0.30772814],\n",
+       "        [-0.42791155],\n",
+       "        [-0.415447  ],\n",
+       "        [ 0.19783098],\n",
+       "        [-0.2957212 ],\n",
+       "        [ 0.24658042],\n",
+       "        [-0.37485245],\n",
+       "        [-0.11042038],\n",
+       "        [ 0.3339082 ],\n",
+       "        [ 0.30932462],\n",
+       "        [-0.06961152],\n",
+       "        [ 0.25109732],\n",
+       "        [-0.19937393],\n",
+       "        [-0.10875916],\n",
+       "        [-0.44035786],\n",
+       "        [-0.20315972],\n",
+       "        [ 0.30610478],\n",
+       "        [-0.33109158]], dtype=float32)>,\n",
+       " <tf.Variable 'layer_out/bias:0' shape=(1,) dtype=float32, numpy=array([0.], dtype=float32)>]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Display the Sequential model summary\n",
-    "print(neural_net_model.summary())\n",
-    "display(neural_net_model.summary())\n",
-    "neural_net_model.summary()"
+    "# Review the model layers created, along with initial iterative input weights prior to seeing any data\n",
+    "display(neural_net_model.layers)\n",
+    "display(neural_net_model.weights) # For example, confirms 29 weights applied at the output layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"neural_net_venture_funding_model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " layer_1 (Dense)             (None, 58)                6786      \n",
+      "                                                                 \n",
+      " layer_2 (Dense)             (None, 29)                1711      \n",
+      "                                                                 \n",
+      " layer_out (Dense)           (None, 1)                 30        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 8527 (33.31 KB)\n",
+      "Trainable params: 8527 (33.31 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Display the summary for the Sequential model build.\n",
+    "# Note to self: every layer has both an input and output attribute, c.f. https://keras.io/guides/sequential_model/\n",
+    "display(neural_net_model.summary())"
    ]
   },
   {
@@ -2608,7 +2727,7 @@
    "outputs": [],
    "source": [
     "# Compile the Sequential model\n",
-    "# YOUR CODE HERE\n"
+    "neural_net_model.compile(loss='binary-crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
