Added interim development

--- a/venture_funding_with_deep_learning.ipynb
+++ b/venture_funding_with_deep_learning.ipynb
@@ -2911,15 +2911,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bozmbp18/Tresorit/Boz & Company LLC/IAR/Todd Meier/Education/Columbia Engineering/CU-VIRT-FIN-PT-06-2023-U-LOLC/GitHub_Repository/CU-VIRT-FIN-PT-06-2023-U-LOLC/Week_13/Homework/neural-networks-challenge/.venv/lib/python3.10/site-packages/keras/src/engine/training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the model's file path\n",
-    "file_path = # YOUR CODE HERE\n",
+    "file_nm_path = Path('Resources/AlphabetSoup.h5')\n",
+    "# Alternatively, set the file name path to the native .keras file format\n",
+    "file_nm_path_alt = Path('Resources/AlphabetSoup.keras')\n",
     "\n",
     "# Export your model to a HDF5 file\n",
-    "# YOUR CODE HERE\n"
+    "neural_net.save(file_nm_path)\n",
+    "# Alternatively, export to the native .keras file format\n",
+    "neural_net.save(file_nm_path_alt)"
    ]
   },
   {
