--- a/venture_funding_with_deep_learning.ipynb
+++ b/venture_funding_with_deep_learning.ipynb
@@ -3173,6 +3173,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'layer_1a_A1/kernel:0' shape=(116, 58) dtype=float32, numpy=\n",
+       " array([[ 0.05989848, -0.10439435,  0.1169018 , ..., -0.07815471,\n",
+       "          0.12110873,  0.12712206],\n",
+       "        [ 0.02882014, -0.06222215, -0.04664068, ...,  0.00250883,\n",
+       "          0.16993193, -0.13758   ],\n",
+       "        [-0.08082297,  0.01115392, -0.01888655, ..., -0.1045261 ,\n",
+       "         -0.16919479,  0.14946498],\n",
+       "        ...,\n",
+       "        [-0.08089563, -0.03713492,  0.1373732 , ..., -0.10858237,\n",
+       "          0.0564553 , -0.0794432 ],\n",
+       "        [ 0.17367534,  0.0125035 ,  0.11503188, ..., -0.03182611,\n",
+       "         -0.08406227,  0.03789017],\n",
+       "        [ 0.16740616,  0.15621297, -0.16267176, ..., -0.06687465,\n",
+       "         -0.06979939, -0.04648401]], dtype=float32)>,\n",
+       " <tf.Variable 'layer_1a_A1/bias:0' shape=(58,) dtype=float32, numpy=\n",
+       " array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0.], dtype=float32)>,\n",
+       " <tf.Variable 'layer_2a_A1/kernel:0' shape=(58, 29) dtype=float32, numpy=\n",
+       " array([[-0.06193452,  0.25454128, -0.06061879, ...,  0.02251625,\n",
+       "          0.21798527,  0.20419821],\n",
+       "        [-0.09189895,  0.01556429,  0.15434432, ...,  0.14636344,\n",
+       "         -0.05623491, -0.13589181],\n",
+       "        [ 0.01786789,  0.12830621, -0.055272  , ..., -0.24523774,\n",
+       "          0.2421397 ,  0.01371485],\n",
+       "        ...,\n",
+       "        [ 0.0706338 ,  0.19764712,  0.11285868, ..., -0.06142305,\n",
+       "          0.01349434,  0.15998846],\n",
+       "        [-0.14226475, -0.24288692, -0.07504487, ..., -0.12160186,\n",
+       "          0.05973464, -0.2100169 ],\n",
+       "        [-0.0943899 , -0.20106743,  0.07034686, ...,  0.05388552,\n",
+       "         -0.13511148,  0.25060505]], dtype=float32)>,\n",
+       " <tf.Variable 'layer_2a_A1/bias:0' shape=(29,) dtype=float32, numpy=\n",
+       " array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)>,\n",
+       " <tf.Variable 'layer_out_a_A1/kernel:0' shape=(29, 1) dtype=float32, numpy=\n",
+       " array([[-0.3515635 ],\n",
+       "        [ 0.15873694],\n",
+       "        [-0.26911157],\n",
+       "        [-0.24689358],\n",
+       "        [ 0.330449  ],\n",
+       "        [ 0.14961076],\n",
+       "        [ 0.09639442],\n",
+       "        [-0.20980026],\n",
+       "        [-0.39432445],\n",
+       "        [-0.01648515],\n",
+       "        [-0.4103477 ],\n",
+       "        [-0.31862193],\n",
+       "        [ 0.02602693],\n",
+       "        [-0.23565009],\n",
+       "        [-0.40383947],\n",
+       "        [-0.3189366 ],\n",
+       "        [ 0.26812   ],\n",
+       "        [-0.31367743],\n",
+       "        [ 0.33984256],\n",
+       "        [-0.24667299],\n",
+       "        [-0.27975148],\n",
+       "        [-0.36240846],\n",
+       "        [-0.19386798],\n",
+       "        [ 0.17681098],\n",
+       "        [-0.272938  ],\n",
+       "        [ 0.39909118],\n",
+       "        [-0.19106153],\n",
+       "        [ 0.37330884],\n",
+       "        [ 0.09091073]], dtype=float32)>,\n",
+       " <tf.Variable 'layer_out_a_A1/bias:0' shape=(1,) dtype=float32, numpy=array([0.], dtype=float32)>]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Review the model's dense layers created, along with initial iterative input weights and bias prior to seeing any data\n",
+    "display(neural_net_A1.weights)\n",
+    "#weights, biases = neural_net_A1.layers[0].get_weights()\n",
+    "#print(weights, biases)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
