Added interim development

--- a/venture_funding_with_deep_learning reference copy.ipynb
+++ b/venture_funding_with_deep_learning reference copy.ipynb
@@ -2870,7 +2870,7 @@
     "neural_net_trained_model = neural_net.fit(X_train_scaled, y_train, epochs=50)\n",
     "# 32 training samples is the default batch size.  The total training sample size is 25724, or 75% of 34299. \\n\n",
     "# Therefore, there are 804 batches run per epoch, at 32 samples per batch, equals 25724 training samples per epoch.\n",
-    "# The model struggles in training to reduce losses, while little progress is made to improve accuracy"
+    "# The model struggles in training to reduce losses, while little progress is made to improve accuracy."
    ]
   },
   {
