Added interim development

--- a/venture_funding_with_deep_learning.ipynb
+++ b/venture_funding_with_deep_learning.ipynb
@@ -4567,7 +4567,9 @@
     "print(f\"Available keys from train history dictionary: {neural_net_trained_model_A1.history.keys()}\\n\")\n",
     "\n",
     "# Display the model train loss and accuracy results\n",
-    "print(f\"Train Results:\\nLoss: {neural_net_trained_model.history['loss'][-1]}, Accuracy: {neural_net_trained_model.history['accuracy'][-1]}\")"
+    "print(f\"Train Results:\\nLoss: {neural_net_trained_model.history['loss'][-1]}, Accuracy: {neural_net_trained_model.history['accuracy'][-1]}\")\n",
+    "\n",
+    "# Interesting to observe in this particular training iteration that the test results turned out superior to the actual training.  Other training iterations of this model did not generally produce this directional result."
    ]
   },
   {
@@ -4895,6 +4897,7 @@
     }
    ],
    "source": [
+    "# Reviewing dataset of test predictions vs. target\n",
     "test_actuals = y_test\n",
     "test_predictions_all_df = test_actuals.rename(columns={'IS_SUCCESSFUL': 'Test_Actual'})\n",
     "test_predictions_all_df['Test_Pred_Orig'] = neural_net.predict(X_test_scaled)\n",
@@ -4902,17 +4905,6 @@
     "test_predictions_all_df['Test_Pred_A2'] = neural_net_A2.predict(X_test_scaled)\n",
     "test_predictions_all_df['Test_Pred_A3'] = neural_net_A3.predict(X_test_scaled)\n",
     "test_predictions_all_df = test_predictions_all_df.reset_index(drop=True)\n",
-    "\n",
-    "# #test_predictions_all_df=pd.concat([X_test_scaled.reshape(-1,1), test_predictions, test_predictions_A1, test_predictions_A2, test_predictions_A3], keys=['Test_Actual', 'Test_Pred_Orig', 'Test_Pred_A1', 'Test_Pred_A2', 'Test_Pred_A3'])\n",
-    "# test_actuals\n",
-    "\n",
-    "# test_predictions_orig\n",
-    "# test_actuals\n",
-    "#test_predictions_all_df = pd.DataFrame({'Test_Actuals': test_actuals, 'Test_Pred_Orig': test_predictions_orig ,'Test_Pred_A1': test_predictions_A1,\n",
-    "#                                         'Test_Pred_A2':test_predictions_A2, 'Test_Pred_A3':test_predictions_A3})\n",
-    "# test_predictions_all_df = pd.DataFrame(test_actuals, keys\n",
-    "\n",
-    "# display(test_actuals)\n",
     "display(test_predictions_all_df)"
    ]
   },
@@ -4920,13 +4912,199 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">* `Note: We believe the`"
+    ">* `Within the context of the alternative models, the original model did not produce a terrible result, where training accuracy was inferior to the alternatives by just around 4.1% in the worst case (0.7062/0.7364-1): original vs A3 model).  Test loss and accuracy metrics were self-consistent and comparable to training with respect to each model, indicative of robust models out-of-sample.`\n",
+    "\n",
+    ">* `We believe the loss function for the original model appeared much worse, while simultaneously showing competitive accuracy against the alternative models, because the loss function was derived from the raw predictions versus actual, whereas the accuracy metric defaulted to binary accuracy, reflecting, or consistent with, the binary_crossentropy loss specification, which transformed and classified the raw predictions as a 0 or 1 class label, based on a default 0.5 threshold. (In other words, predictions below 0.5 were assigned the 0 label, whereas those above 0.5 were assigned the 1 label, and then accuracy calculated, yielding relatively competitive and consistent accuracy across all models, and which remained robust to testing.)`\n",
+    "\n",
+    ">* `References: https://keras.io/guides/training_with_built_in_methods/, https://visualstudiomagazine.com/articles/2018/08/30/neural-binary-classification-keras.aspx`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bozmbp18/Tresorit/Boz & Company LLC/IAR/Todd Meier/Education/Columbia Engineering/CU-VIRT-FIN-PT-06-2023-U-LOLC/GitHub_Repository/CU-VIRT-FIN-PT-06-2023-U-LOLC/Week_13/Homework/neural-networks-challenge/.venv/lib/python3.10/site-packages/sklearn/utils/validation.py:1183: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sojourn.  Reviewing quickly performance of a traditional non-iterative supervised learning model to explain our venture funding data.\n",
+    "# Classification with Support Vector Model:\n",
+    "# Import SVM library\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# Instantiate an SVM classification model\n",
+    "svc = SVC(kernel='rbf')\n",
+    "\n",
+    "# Fit the Data\n",
+    "svc_model = svc.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25719</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25720</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25721</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25722</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25723</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25724 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Prediction  Actual\n",
+       "0               0       0\n",
+       "1               1       1\n",
+       "2               1       1\n",
+       "3               1       1\n",
+       "4               1       1\n",
+       "...           ...     ...\n",
+       "25719           0       0\n",
+       "25720           1       1\n",
+       "25721           0       0\n",
+       "25722           0       0\n",
+       "25723           0       0\n",
+       "\n",
+       "[25724 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Review training data predictions\n",
+    "y_train_predictions = svc_model.predict(X_train_scaled)\n",
+    "train_results = pd.DataFrame({\"Prediction\": y_train_predictions, \"Actual\": y_train['IS_SUCCESSFUL']}).reset_index(drop=True)\n",
+    "display(train_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SVM SVC Model Train Score: 0.7339838283315192\\n'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SVM SVC Model Test Score: 0.7286297376093295'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Score the model as trained\n",
+    "score_train = svc_model.score(X_train_scaled, y_train)\n",
+    "display(f\"SVM SVC Model Train Score: {score_train}\\n\")\n",
+    "\n",
+    "# Score the model exposed to unseen test data\n",
+    "score_test = svc_model.score(X_test_scaled, y_test)\n",
+    "display(f\"SVM SVC Model Test Score: {score_test}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    ">* `Traditional closed-form supervised learning model, using a support vector machine classifier, appeared to perform just as well as a more complex and resource-intensive neural net model.`"
+   ]
   }
  ],
  "metadata": {
